--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@typechain/ethers-v5": "^8.0.5",
     "@typechain/truffle-v5": "^6.0.0",
+    "@types/jest": "^27.4.0",
     "@types/node": "17.0.1",
     "@types/react": "17.0.37",
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "^10.4.2",
     "chai": "^4.3.4",
     "dotenv": "^10.0.0",
     "eslint": "8.5.0",
@@ -38,7 +39,7 @@
     "hardhat": "^2.8.0",
     "postcss": "^8.4.5",
     "react-icons": "^4.3.1",
-    "tailwindcss": "^3.0.7",
+    "tailwindcss": "^3.0.13",
     "ts-node": "^10.4.0",
     "typechain": "^6.0.5",
     "typescript": "4.5.4"
