--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "17.0.2",
     "solc": "0.8.10",
     "solidity-coverage": "^0.7.17",
-    "zustand": "^3.6.7"
+    "web3modal": "^1.9.5",
+    "zustand": "^3.6.9"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.3",
