--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@typechain/hardhat": "^3.0.0",
     "dotenv": "^10.0.0",
     "hardhat-gas-reporter": "^1.0.6",
+    "mocha": "^9.1.4",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
