--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@typechain/ethers-v5": "^8.0.5",
     "@typechain/truffle-v5": "^6.0.0",
     "@types/jest": "^27.4.0",
+    "@types/mocha": "^9.0.0",
     "@types/node": "17.0.1",
     "@types/react": "17.0.37",
     "autoprefixer": "^10.4.2",
