--- a/package.json
+++ b/package.json
@@ -11,7 +11,16 @@
     "@chainlink/contracts": "^0.3.1",
     "@openzeppelin/contracts": "^4.4.2",
     "@typechain/hardhat": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "2.x",
+    "@typescript-eslint/parser": "2.x",
+    "babel-eslint": "10.x",
     "dotenv": "^10.0.0",
+    "eslint-config-react-app": "^7.0.0",
+    "eslint-plugin-flowtype": "4.x",
+    "eslint-plugin-import": "2.x",
+    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-react": "7.x",
+    "eslint-plugin-react-hooks": "2.x",
     "hardhat-gas-reporter": "^1.0.6",
     "mocha": "^9.1.4",
     "next": "12.0.7",
@@ -35,7 +44,7 @@
     "autoprefixer": "^10.4.2",
     "chai": "^4.3.4",
     "dotenv": "^10.0.0",
-    "eslint": "8.5.0",
+    "eslint": "6.x",
     "eslint-config-next": "12.0.7",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.2",
